see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Mar-2013 Jean-Marie Simonet
 # [#26860] A Contact name *must not* be unique. Thanks Christophe
 $ Updating Swahili intallation ini file

17-Mar-2013 Jean-Marie Simonet
 #+ [#29677] robots.txt in updates. Thanks Mark
 + [#29294] Show Correct Meta Titles in Joomla Admin for better usability. Thanks Parth
 # [#29810] File deletion issue. Thanks Elin
 # [#30312] *Porting to 2.5.x a 3.x improvement in languagefilter

16-Mar-2013 Michael Babker
 # [#30249] Show Intro Text = Hide currently has no effect in Featured and Category menu items.  Thanks Matt

16-Mar-2013 Jean-Marie Simonet
 +$ [#27945] Hide Subcategories text. Thanks Aka.

05-Mar-2013 Jean-Marie Simonet
 + [#29769] com_config component missing triggers on save. Thanks Nicholas Antimisiaris

28-Feb-2013 Jean-Marie Simonet
 # [#30100] Plugins ordering broken when search filter is populated. Thanks Jurian
 # [#29968] Only text gets passed to content events in blog view (for Joomla 2.5.x). Thanks Jonathan.

09-Feb-2013 Michael Babker
 # [#29970] Robots.txt check url no more working.  Thanks Brian

-------------------- 2.5.9 Stable Release [4-February-2013] ------------------

30-Jan-2013 Mark Dexter
 # [#27709] Saving in backend very slow when many user groups. Thanks Elin.
 # [#29705] blank login page J3.x beez3.

29-Jan-2013 Mark Dexter
 # [#29999] Fix fatal error in JInstallerFile::uninstall(). Thanks Matias Griese.
 # [#28714] Authentication - Gmail: Apply Username suffix does not allow user to login with suffix already applied. Thanks Janich Rasmussen.

26-Jan-2013 Jean-Marie Simonet